--- a/SistemaInterdisciplinar/SistemaInterdisciplinar.csproj
+++ b/SistemaInterdisciplinar/SistemaInterdisciplinar.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Configuracoes.cs" />
     <Compile Include="CtrlConexao.cs" />
     <Compile Include="CtrlLogin.cs" />
     <Compile Include="frm_cadastro.cs">
@@ -53,6 +54,12 @@
     </Compile>
     <Compile Include="frm_cadastro.Designer.cs">
       <DependentUpon>frm_cadastro.cs</DependentUpon>
+    </Compile>
+    <Compile Include="frm_config.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frm_config.Designer.cs">
+      <DependentUpon>frm_config.cs</DependentUpon>
     </Compile>
     <Compile Include="frm_login.cs">
       <SubType>Form</SubType>
@@ -71,6 +78,9 @@
     <Compile Include="Usuario.cs" />
     <EmbeddedResource Include="frm_cadastro.resx">
       <DependentUpon>frm_cadastro.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frm_config.resx">
+      <DependentUpon>frm_config.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frm_login.resx">
       <DependentUpon>frm_login.cs</DependentUpon>
