--- a/SistemaInterdisciplinar/App.config
+++ b/SistemaInterdisciplinar/App.config
@@ -1,5 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+  <appSettings>
+    <add key="mascaraInterna" value="9-9-99-99-99"/>
+    <add key="mascaraImpressao" value="9-9-99-99-99"/>
+    <add key="nomeEmpresa" value="EJC LTDA"/>
+  </appSettings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
