--- a/SistemaInterdisciplinar/App.config
+++ b/SistemaInterdisciplinar/App.config
@@ -1,5 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+  <configSections>
+  </configSections>
+  <connectionStrings>
+    <add name="SistemaInterdisciplinar.Properties.Settings.dbConnectionString"
+      connectionString="Provider=Microsoft.ACE.OLEDB.12.0;Data Source=|DataDirectory|\db.accdb"
+      providerName="System.Data.OleDb" />
+  </connectionStrings>
   <appSettings>
     <add key="mascaraInterna" value="9-9-99-99-99"/>
     <add key="mascaraImpressao" value="9-9-99-99-99"/>
