--- a/SistemaInterdisciplinar/SistemaInterdisciplinar.csproj
+++ b/SistemaInterdisciplinar/SistemaInterdisciplinar.csproj
@@ -51,6 +51,7 @@
     <Compile Include="CtrlConexao.cs" />
     <Compile Include="CtrlContas.cs" />
     <Compile Include="CtrlLogin.cs" />
+    <Compile Include="CtrlEstoque.cs" />
     <Compile Include="dbDataSet.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -90,6 +91,18 @@
     <Compile Include="frm_contas_grade.Designer.cs">
       <DependentUpon>frm_contas_grade.cs</DependentUpon>
     </Compile>
+    <Compile Include="frm_estoque.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frm_estoque.Designer.cs">
+      <DependentUpon>frm_estoque.cs</DependentUpon>
+    </Compile>
+    <Compile Include="frm_es_estoque.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frm_es_estoque.Designer.cs">
+      <DependentUpon>frm_es_estoque.cs</DependentUpon>
+    </Compile>
     <Compile Include="frm_login.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -128,6 +141,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frm_contas_grade.resx">
       <DependentUpon>frm_contas_grade.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frm_es_estoque.resx">
+      <DependentUpon>frm_es_estoque.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frm_login.resx">
       <DependentUpon>frm_login.cs</DependentUpon>
