--- a/SistemaInterdisciplinar/SistemaInterdisciplinar.csproj
+++ b/SistemaInterdisciplinar/SistemaInterdisciplinar.csproj
@@ -103,6 +103,18 @@
     <Compile Include="frm_es_estoque.Designer.cs">
       <DependentUpon>frm_es_estoque.cs</DependentUpon>
     </Compile>
+    <Compile Include="frm_lancamento.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frm_lancamento.Designer.cs">
+      <DependentUpon>frm_lancamento.cs</DependentUpon>
+    </Compile>
+    <Compile Include="frm_lancamentos.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frm_lancamentos.Designer.cs">
+      <DependentUpon>frm_lancamentos.cs</DependentUpon>
+    </Compile>
     <Compile Include="frm_login.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -127,6 +139,18 @@
     <Compile Include="frm_principal.Designer.cs">
       <DependentUpon>frm_principal.cs</DependentUpon>
     </Compile>
+    <Compile Include="frm_produto.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frm_produto.Designer.cs">
+      <DependentUpon>frm_produto.cs</DependentUpon>
+    </Compile>
+    <Compile Include="frm_senha.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frm_senha.Designer.cs">
+      <DependentUpon>frm_senha.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Usuario.cs" />
@@ -142,8 +166,17 @@
     <EmbeddedResource Include="frm_contas_grade.resx">
       <DependentUpon>frm_contas_grade.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="frm_estoque.resx">
+      <DependentUpon>frm_estoque.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frm_es_estoque.resx">
       <DependentUpon>frm_es_estoque.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frm_lancamento.resx">
+      <DependentUpon>frm_lancamento.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frm_lancamentos.resx">
+      <DependentUpon>frm_lancamentos.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frm_login.resx">
       <DependentUpon>frm_login.cs</DependentUpon>
@@ -156,6 +189,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frm_principal.resx">
       <DependentUpon>frm_principal.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frm_produto.resx">
+      <DependentUpon>frm_produto.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frm_senha.resx">
+      <DependentUpon>frm_senha.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
